--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ ul#services li{
     padding: 20px;
     border: #cccccc solid 1px;
     margin-bottom: 5px;
-    background: #32a0c2;
+    background: #6ac6e2;
   }
   ul#services h3{
     border-bottom: #353637 solid 1px;
